# dpu_olap

./: .gitignore  .tarignore  CMakeLists.txt  Dependencies.cmake  LICENSE  Makefile  README.md
baseline/: filter.py  join.py  requirements.txt  sum.py  take.py
dpu/: CMakeLists.txt
dpu/aggr/: CMakeLists.txt  main.c
dpu/filter/: CMakeLists.txt  main.c
dpu/join/: CMakeLists.txt  main.c
dpu/partition/: CMakeLists.txt  main.c
dpu/shared/: mram_alloc.c  mram_alloc.h  mram_ra.h
dpu/shared/hashtable/: hashtable.c  hashtable.h  hashtable_test.c  hashtable_test.py
dpu/shared/kernels/: aggr.c  aggr.h  common.h  filter.c  filter.h  hash_build.c  hash_build.h  hash_probe.c  hash_probe.h  mutex_pool.h  partition.c  partition.h  take.c  take.h
dpu/take/: CMakeLists.txt  main.c
host/: CMakeLists.txt  main_benchmark.cc
host/aggr/: aggr_benchmark.cc  aggr_dpu.cc  aggr_dpu.h  aggr_native.cc  aggr_native.h  aggr_test.cc
host/dpuext/: api.h  arrow_utils.cc  arrow_utils.h  dpuext.hpp  perf.cc  perf.h  status.h
host/filter/: filter_benchmark.cc  filter_dpu.cc  filter_dpu.h  filter_native.cc  filter_native.h  filter_test.cc
host/generator/: generator.cc  generator.h  random.cc
host/join/: join_benchmark.cc  join_dpu.cc  join_dpu.h  join_native.cc  join_native.h  join_test.cc
host/memory_utils/: memcpy.h  memcpy_benchmark.cc
host/partition/: partition.cc  partition.h  partition_benchmark.cc  partition_dpu.cc  partition_dpu.h  partition_test.cc  partitioner.cc  partitioner.h
host/system/: system.h
host/take/: take_benchmark.cc  take_dpu.cc  take_dpu.h  take_native.cc  take_native.h  take_test.cc
host/timer/: timer.cc  timer.h
scripts/: dpucount.py  parse_results.py  run-cpp-baselines.sh  run-python-baselines.sh  run-upmem-2048.sh  run-upmem-scale.sh
shared/umq/: bitops.h  cflags.h  kernels.h  log.h
